goservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goservice
  name: goservice
  namespace: go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goservice
  strategy: {}
  template:
    metadata:
      labels:
        app: goservice
    spec:
      containers:
      - image: wlanboy/goservice
        name: goservice
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
          requests:
            cpu: "0.5"
            memory: "128Mi"
status: {}
