goservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: goservice-service
  name: goservice-service
  namespace: go
spec:
  selector:
    app: goservice
  ports:
  - name: 8000-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
#  type: ClusterIP
  type: LoadBalancer
#  type: NodePort
