goservice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goservice-ingress
  namespace: go
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /goservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: goservice-service
            port:
              number: 8000
